; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_auth_master_new.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_auth_master_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_master = type { %struct.auth_master* }

@.str = private unnamed_addr constant [15 x i8] c"malloc failure\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.auth_master* (%struct.auth_master***)* @auth_master_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.auth_master* @auth_master_new(%struct.auth_master*** %0) #0 {
  %2 = alloca %struct.auth_master*, align 8
  %3 = alloca %struct.auth_master***, align 8
  %4 = alloca %struct.auth_master*, align 8
  store %struct.auth_master*** %0, %struct.auth_master**** %3, align 8
  %5 = call i64 @calloc(i32 1, i32 8)
  %6 = inttoptr i64 %5 to %struct.auth_master*
  store %struct.auth_master* %6, %struct.auth_master** %4, align 8
  %7 = load %struct.auth_master*, %struct.auth_master** %4, align 8
  %8 = icmp ne %struct.auth_master* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 @log_err(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store %struct.auth_master* null, %struct.auth_master** %2, align 8
  br label %19

11:                                               ; preds = %1
  %12 = load %struct.auth_master*, %struct.auth_master** %4, align 8
  %13 = load %struct.auth_master***, %struct.auth_master**** %3, align 8
  %14 = load %struct.auth_master**, %struct.auth_master*** %13, align 8
  store %struct.auth_master* %12, %struct.auth_master** %14, align 8
  %15 = load %struct.auth_master*, %struct.auth_master** %4, align 8
  %16 = getelementptr inbounds %struct.auth_master, %struct.auth_master* %15, i32 0, i32 0
  %17 = load %struct.auth_master***, %struct.auth_master**** %3, align 8
  store %struct.auth_master** %16, %struct.auth_master*** %17, align 8
  %18 = load %struct.auth_master*, %struct.auth_master** %4, align 8
  store %struct.auth_master* %18, %struct.auth_master** %2, align 8
  br label %19

19:                                               ; preds = %11, %9
  %20 = load %struct.auth_master*, %struct.auth_master** %2, align 8
  ret %struct.auth_master* %20
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @log_err(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
